# b2share

./: pyproject.toml  setup.py
b2share/: config.py  factory.py
b2share/modules/access/: permissions.py
b2share/modules/communities/: cli.py  permissions.py
b2share/modules/deposit/: permissions.py  views.py
b2share/modules/files/: permissions.py  storage.py
b2share/modules/records/: triggers.py  views.py
b2share/modules/records/serializers/: __init__.py  response.py
b2share/modules/records/serializers/schemas/: datacite.py
b2share/modules/schemas/: cli.py
b2share/modules/schemas/root_schemas/: root_schema_v1.json
b2share/modules/upgrade/upgrades/: upgrade_2_1_3_to_2_1_5.py
b2share/modules/users/: permissions.py  views.py
tests/: conftest.py
webui/: package.json  webpack.config.devel.js
webui/src/: main.jsx
webui/src/components/: editfiles.jsx  record.jsx
webui/src/data/: ajax.js
